# eldrin

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  eldrin_postman_collection.json  sqlx-data.json  start.sh
.sqlx/: query-044ee48af5bd25718a0e65b7a2ef0154b58fdbe1f8a77a963e7ab991050e89ae.json  query-08be6f9ab35ff32435a28502ded90dfb32043a6141e6d5dc351bbb32e00152fd.json  query-0b4c0e186b6ddd41ea282d5cf21d213b6f02b9c204c5fd640298ecac7d752616.json  query-154739909ad6c434759e46016acabb9563938a015fee5d9dba8932e32503496d.json  query-2195ce24dc65a5f058f400c91203f033108668d9d369e04eb1f463bf417f3fdf.json  query-21b92271ad6f1d38758f8b9bd17835c32edbdc677aeccdb4e3a89378cf0d36ec.json  query-297b1729e11420034d3ab0e593b6a11911e737da37be2ed2d5b5388337da5639.json  query-2adb77f7e9222566bf64a8d473f9c5eddfd15c39e40a0f5d64f40169936193d3.json  query-2b05fd876d65f897bb87233b24b29c7a72850d42734cb4cf4ec4531bfae0c211.json  query-397d5d37349936a2cc66219c9679fce456896283e7caee648cfb938a719eddba.json  query-443743002ca6544d66987c6197eebbfeb2c5ce4f9e7d3fae40441fc0f6289e3f.json  query-461e538890960bec81c43caad16d8715f5e7a0292e3f675111dc288aeebfd3a9.json  (+43 more)
core/: Cargo.toml
core/migrations/: 20250228000001_create_modules_table.sql  20250301000001_create_users_tables.sql  20250303000001_create_roles_permissions_tables.sql
core/src/: main.rs
core/src/api/: mod.rs  routes.rs
core/src/models/: db.rs  mod.rs
core/src/modules/: loader.rs  manager.rs  mod.rs  types.rs
core/src/modules/user/: handlers.rs  manifest.json  mod.rs  models.rs  repository.rs  service.rs
core/src/modules/user/auth/: magic_link.rs  mod.rs  oauth.rs  password.rs  sms.rs  token.rs
core/src/modules/user/models/: auth.rs  mod.rs  permission.rs  profile.rs  role.rs  user.rs
core/src/modules/user/repository/: mod.rs  permission_repository.rs  role_repository.rs  user_repository.rs
core/src/modules/user/service/: auth_service.rs  mod.rs  user_service.rs
core/src/repository/: mod.rs  module_repo.rs
core/src/services/: mod.rs
core/src/utils/: db.rs  mod.rs
documentation/: requirements.md
eldrin-ng/: README.md  angular.json  (+2 more)
(+28 files in other folders)
