[package]
name = "eldrin-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
thiserror = "1.0"
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true

# Authentication related dependencies
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.2"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.21"
time = "0.3"
async-trait = "0.1"
